# haskell-programming-first-principles

./: textMistakes.txt
ch02_intro/: learn.hs
ch03_strings/: print1.hs  print2.hs  print3broken.hs  print3flipped.hs
ch04_datatypes/: greetIfCool1.hs  greetIfCool2.hs  tuples.hs
ch05_types/: writeTypeSig.hs
ch06_typeclasses/: doesItTypeCheck.hs  matchTypes.hs  ord.hs  trivial.hs
ch07_functional_patterns/: casePractice.hs  exercises.hs  matchingTuples1.hs  penguin.hs  registeredUser1.hs  registeredUser2.hs  varietyPack.hs
ch08_recursion/: dividedBy.hs  exercise1.hs  exercise2.hs
ch09_lists/: cipher.hs  enumFromTo.hs  exercises.hs  filtering.hs  myLines.hs  safeList.hs
ch10_folds/: Rewrite.hs  db.hs  fibs.hs  folds.hs  review.hs
ch11_algebraic_datatypes/: AsPatterns.hs  Bottoms.hs  Cardinality.hs  Cipher.hs  Construction.hs  Deconstruction.hs  DogTypes.hs  Exercises.hs  Exponential.hs  ForExample.hs  Garden.hs  Hutton.hs  Language.hs  LogicGoats.hs  NewType.hs  Phone.hs  PityTheBool.hs  ProductTypes.hs  Programmer.hs  Quad.hs  Tree.hs  Vehicles.hs
ch12_signaling_adversity/: BinaryTree.hs  CountTheBeforeVowel.hs  CountVowels.hs  EitherLib.hs  EqCaseGuard.hs  MaybeLib.hs  Natural.hs  Person.hs  ReplaceThe.hs  Unfold.hs  ValidateTheWord.hs
ch13_modules/: Cipher.hs  Palindrome.hs  Person.hs
ch13_modules/hangman/: hangman.cabal
ch13_modules/hangman/src/: Hangman.hs  Main.hs
ch13_modules/hangman/tests/: tests.hs
ch13_modules/hello/: hello.cabal
ch13_modules/hello/src/: Hello.hs
ch14_testing/addition/: Addition.hs  addition.cabal
ch14_testing/exercises/: CipherTests.hs  HangmanTests.hs  QC.hs  WordNumberTest.hs  exercises.cabal
ch14_testing/morse/: morse.cabal
ch14_testing/morse/src/: Arbitrary.hs  Main.hs  Morse.hs
ch15_monoid_semigroup/: AscQC.hs  Madlibs.hs  MaybeAnother.hs  Monoids.hs  Optional.hs  Semigroups.hs
ch15_monoid_semigroup/orphan-instance/: ListyInstances.hs
ch16_functor/: BeKind.hs  Exercises.hs  FunctorQuickCheck.hs  Functors.hs  HeavyLifting.hs  Nat.hs  Possibly.hs  ReplaceExperiment.hs  Sum.hs  functors1.hs  functors2.hs  functors3.hs  functors4.hs  functors5.hs
ch17_applicative/: Combinations.hs  Constant.hs  FixerUpper.hs  Identity.hs  Lookups.hs  Person.hs
ch17_applicative/tests/: tests.cabal
ch17_applicative/tests/src/: Exercises.hs  Main.hs  Validation.hs
ch18_monad/: Bind.hs  EitherMonad.hs  ListMonad.hs  MaybeMonad.hs
ch18_monad/tests/: tests.cabal
ch18_monad/tests/src/: BadMonad.hs  Exercises1.hs  Exercises2.hs
ch19_applying_structure/shawty/: shawty.cabal
ch19_applying_structure/shawty/app/: Main.hs
ch2/: FunctionWithWhere.hs
ch20_foldable/: Exercises.hs  Foldables.hs  LibraryFunctions.hs
ch21_traversable/exercises/: exercises.cabal
ch21_traversable/exercises/src/: Exercises.hs  Main.hs  SkiFree.hs  Tree.hs
ch22_reader/: Boop.hs  Exercises.hs  ReaderPractice.hs  Warmup.hs
ch23_state/: Exercises.hs  FizzBuzz.hs  Moi.hs  RandomExample.hs  RandomExample2.hs
ch24_parser_combinators/: README.md  ch24-parser-combinators.cabal
ch24_parser_combinators/src/: Fractions.hs  LearnParsers.hs
ch25_composing_types/: Bifunctor.hs  Compose.hs  IdentityT.hs
ch26_monad_transformers/: EitherT.hs  Exercises.hs  FixTheCode.hs  MaybeT.hs  OuterInner.hs  ReaderT.hs  Reco.hs  StateT.hs  scotty.hs
ch3_strings/: print3.hs  print4.hs
ch4_datatypes/: exercises.hs
ch5_types/: applyYourself.hs  determineTypes.hs  fixIt.hs  parametricity.hs  typeKwonDo.hs  writeFunc.hs
ch6_typeclasses/: exercise1.hs  typeKwonDo.hs
ch7_functional_patterns/: arith2.hs  arith4.hs  grabBag.hs  greetIfCool3.hs  guardDuty.hs
ch8_recursion/: factorial.hs  mccarthy91.hs  wordNumber.hs
ch9_lists/: bottomMadness.hs  myParse.hs  myStdLib.hs  myWords.hs  squareCube.hs  zipping.hs
