name:                ch24-parser-combinators
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ch24-parser-combinators#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable learn
  hs-source-dirs:      src
  main-is:             LearnParsers.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       parsers,
                       trifecta
