name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
description:         Classic Hangman Game
homepage:            https://github.com/vinhhv/haskell_first_principles/ch13_modules/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Vinh Vu
maintainer:          https://github.com/vinhhv
copyright:           2018 Vinh Vu
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random,
                       split
