name:                exercises
version:             0.1.0.0
homepage:            https://github.com/githubuser/exercises
license:             BSD3
license-file:        LICENSE
author:              Vinh Vu
maintainer:          example@example.com
copyright:           2018 Vinh Vu
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     UsingQuickCheck,
                       WordNumber,
                       WordNumberTest
  ghc-options:         -fwarn-tabs
  build-depends:       base >= 4.7 && < 5,
                       hspec,
                       QuickCheck
  hs-source-dirs:      .
  default-language:    Haskell2010
