name:                morse
version:             0.1.0.0
homepage:            https://github.com/githubuser/morse#readme
license:             BSD3
license-file:        LICENSE
author:              Vinh Vu
maintainer:          example@example.com
copyright:           2018 Vinh Vu
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Morse, WordNumber
  ghc-options:         -fwarn-tabs
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010

executable morse
  hs-source-dirs:      src
  ghc-options:         -fwarn-tabs
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       morse,
                       QuickCheck

test-suite tests
  ghc-options:         -fno-warn-orphans
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      tests
  build-depends:       base,
                       containers,
                       morse,
                       QuickCheck
  default-language:    Haskell2010
