name:                tests
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tests#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tests
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       QuickCheck,
                       checkers

executable badmonad
  hs-source-dirs:      src
  main-is:             BadMonad.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       QuickCheck,
                       checkers

executable exercises1
  hs-source-dirs:      src
  main-is:             Exercises1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       QuickCheck,
                       checkers

executable exercises2
  hs-source-dirs:      src
  main-is:             Exercises2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       QuickCheck,
                       checkers

